--- a/SCME.UI/PagesCommon/HardwareStatus.xaml
+++ b/SCME.UI/PagesCommon/HardwareStatus.xaml
@@ -1,179 +1,55 @@
-﻿<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<Page x:Class="SCME.UI.PagesCommon.HardwareStatusPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:my="clr-namespace:SCME.UI"
-      xmlns:res="clr-namespace:SCME.UI.Properties" xmlns:customControls="clr-namespace:SCME.UI.CustomControl"
+      xmlns:customControls="clr-namespace:SCME.UI.CustomControl"
+      xmlns:res="clr-namespace:SCME.UI.Properties"
       xmlns:uiServiceConfig="clr-namespace:SCME.UIServiceConfig.Properties;assembly=SCME.UIServiceConfig"
-      x:Class="SCME.UI.PagesCommon.HardwareStatusPage"
-      mc:Ignorable="d" d:DesignWidth="1280" d:DesignHeight="944"
-      Name="welcomeScreen"
+      mc:Ignorable="d"
+      d:DesignWidth="1280" d:DesignHeight="944"
+      x:Name="welcomeScreen"
       Title="{x:Static res:Resources.Hardware}">
-
     <Page.Resources>
-
-        <my:BooleanToVisibilityConverter x:Key="B2V" />
-
+        <my:BooleanToVisibilityConverter x:Key="B2V"/>
         <Style TargetType="{x:Type customControls:HardwareItem}">
-            <Setter Property="Margin" Value="10" />
+            <Setter Property="Margin" Value="10"/>
         </Style>
-
-        <Style TargetType="{x:Type Button}" BasedOn="{StaticResource PrimaryButton}" />
-
+        <Style TargetType="{x:Type Button}" BasedOn="{StaticResource PrimaryButton}"/>
     </Page.Resources>
-
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="90*" />
-            <RowDefinition Height="10*" />
+            <RowDefinition Height="90*"/>
+            <RowDefinition Height="10*"/>
         </Grid.RowDefinitions>
-
-        <UniformGrid Grid.Column="0" Grid.Row="0" Columns="2">
-
-
-            <customControls:HardwareItem x:Name="serviceControl"
-                                              Title="{x:Static res:Resources.Service}"
-                                              InitializeTimeout="25000" OperationTimeout="25000"
-                                              DisableAvailable="False"
-                                              Backcolor="{StaticResource xBlue2}"
-                                              Logo="{StaticResource ServicePath}" />
-            
-            <customControls:HardwareItem x:Name="syncControl"
-                                         Title="{x:Static res:Resources.Sync}"
-                                         InitializeTimeout="60000" OperationTimeout="60000"
-                                         DisableAvailable="False"
-                                         Backcolor="{StaticResource xBlue2}"
-                                         Logo="{StaticResource SyncPath}" />
-
-            <customControls:HardwareItem x:Name="adapterControl"
-                                              Title="{x:Static res:Resources.Adapter}"
-                                              InitializeTimeout="3000" OperationTimeout="5000"
-                                              DisableAvailable="False"
-                                              Backcolor="{StaticResource xGreen3}"
-                                              Logo="{StaticResource AdapterPath}" />
-
-            <customControls:HardwareItem x:Name="gatewayControl"
-                                              Title="{x:Static res:Resources.Gateway}"
-                                              InitializeTimeout="3000" OperationTimeout="5000"
-                                              DisableAvailable="False"
-                                              Backcolor="{StaticResource xGreen2}"
-                                              Logo="{StaticResource GatewayPath}" />
-
-            <customControls:HardwareItem x:Name="commutationControl"
-                                              Title="{x:Static res:Resources.Commutation}"
-                                              InitializeTimeout="3000" OperationTimeout="0"
-                                              DisableAvailable="False"
-                                              Backcolor="{StaticResource xYellow1}"
-                                              Logo="{StaticResource CommutationPath}" 
-                                              Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=CommIsVisible, Converter={StaticResource B2V}}" />
-
-            <customControls:HardwareItem x:Name="gateControl"
-                                              Title="{x:Static res:Resources.Gate}"
-                                              InitializeTimeout="3000" OperationTimeout="10000"
-                                              DisableAvailable="True"
-                                              Backcolor="{StaticResource xOrange2}"
-                                              Logo="{StaticResource GatePath}"
-                                              Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=GateIsVisible, Converter={StaticResource B2V}}" />
-
-            <customControls:HardwareItem x:Name="vtmControl"
-                                              Title="{x:Static res:Resources.Vtm}"
-                                              InitializeTimeout="15000" OperationTimeout="120000"
-                                              DisableAvailable="True"
-                                              Backcolor="{StaticResource xRed1}"
-                                              Logo="{StaticResource SinusPath}"
-                                              Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=SLIsVisible, Converter={StaticResource B2V}}" />
-
-            <customControls:HardwareItem x:Name="bvtControl"
-                                              Title="{x:Static res:Resources.Bvt}"
-                                              InitializeTimeout="3000" OperationTimeout="25000"
-                                              DisableAvailable="True"
-                                              Backcolor="{StaticResource xBlue3}"
-                                              Logo="{StaticResource BvtPath}"
-                                              Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=BvtIsVisible, Converter={StaticResource B2V}}" />
-            
-            <customControls:HardwareItem x:Name="clampControl"
-                                              Title="{x:Static res:Resources.Clamp}"
-                                              InitializeTimeout="30000" OperationTimeout="40000"
-                                              DisableAvailable="True"
-                                              Backcolor="{StaticResource xGreen2}"
-                                              Logo="{StaticResource ClampPath}"
-                                              Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=ClampIsVisible, Converter={StaticResource B2V}}" />
-
-            <customControls:HardwareItem x:Name="commutationControlEx"
-                                              Title="{x:Static res:Resources.Commutation}"
-                                              InitializeTimeout="3000" OperationTimeout="0"
-                                              DisableAvailable="False"
-                                              Backcolor="{StaticResource xYellow1}"
-                                              Logo="{StaticResource CommutationPath}" 
-                                              Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=CommExIsVisible, Converter={StaticResource B2V}}" />
-
-            <customControls:HardwareItem x:Name="dVdtControl"
-                                              Title="{x:Static res:Resources.dVdt}"
-                                              InitializeTimeout="25000" OperationTimeout="25000"
-                                              DisableAvailable="True"
-                                              Backcolor="{StaticResource xGreen3}"
-                                              Logo="{StaticResource CurvePath}" 
-                                              Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=dVdtIsVisible, Converter={StaticResource B2V}}" />
-
-            <customControls:HardwareItem x:Name="aTUControl"
-                                              Title="{x:Static res:Resources.ATU}"
-                                              InitializeTimeout="25000" OperationTimeout="25000"
-                                              DisableAvailable="True"                                             
-                                              Backcolor="{StaticResource xGreen4}"
-                                              Logo="{StaticResource ATUPath}" 
-                                              Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=ATUIsVisible, Converter={StaticResource B2V}}" />
-
-            <customControls:HardwareItem x:Name="qrrTqControl"
-                                              Title="{x:Static res:Resources.QrrTq}"
-                                              InitializeTimeout="25000" OperationTimeout="25000"
-                                              DisableAvailable="True"                                             
-                                              Backcolor="{StaticResource xGreen1}"
-                                              Logo="{StaticResource QrrTqPath}" 
-                                              Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=QrrTqIsVisible, Converter={StaticResource B2V}}" />
-
-            <customControls:HardwareItem x:Name="rACControl"
-                                              Title="{x:Static res:Resources.RAC}"
-                                              InitializeTimeout="25000" OperationTimeout="25000"
-                                              DisableAvailable="True"                                             
-                                              Backcolor="{StaticResource xGreen3}"
-                                              Logo="{StaticResource RACPath}" 
-                                              Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=RACIsVisible, Converter={StaticResource B2V}}" />
-
-            <customControls:HardwareItem x:Name="ihControl"
-                                              Title="{x:Static res:Resources.IH}"
-                                              InitializeTimeout="25000" OperationTimeout="25000"
-                                              DisableAvailable="True"                                             
-                                              Backcolor="{StaticResource xRed1}"
-                                              Logo="" 
-                                              Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=IHIsVisible, Converter={StaticResource B2V}}" />
-
-            <customControls:HardwareItem x:Name="touControl"
-                                              Title="{x:Static res:Resources.TOU}"
-                                              InitializeTimeout="80000" OperationTimeout="80000"
-                                              DisableAvailable="True"                                             
-                                              Backcolor="{StaticResource xGreen2}"
-                                              Logo="{StaticResource TOUPath}" 
-                                              Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=TOUIsVisible, Converter={StaticResource B2V}}" />
-
+        <UniformGrid Grid.Row="0" Grid.Column="0" Columns="2">
+            <customControls:HardwareItem x:Name="serviceControl" Title="{x:Static res:Resources.Service}" InitializeTimeout="25000" OperationTimeout="25000" DisableAvailable="False" Logo="{StaticResource ServicePath}" Backcolor="{StaticResource xBlue2}"/>
+            <customControls:HardwareItem x:Name="syncControl" Title="{x:Static res:Resources.Sync}" InitializeTimeout="60000" OperationTimeout="60000" DisableAvailable="False" Logo="{StaticResource SyncPath}" Backcolor="{StaticResource xBlue2}"/>
+            <customControls:HardwareItem x:Name="adapterControl" Title="{x:Static res:Resources.Adapter}" InitializeTimeout="3000" OperationTimeout="5000" DisableAvailable="False" Logo="{StaticResource AdapterPath}" Backcolor="{StaticResource xGreen3}"/>
+            <customControls:HardwareItem x:Name="gatewayControl" Title="{x:Static res:Resources.Gateway}" InitializeTimeout="3000" OperationTimeout="5000" DisableAvailable="False" Logo="{StaticResource GatewayPath}" Backcolor="{StaticResource xGreen2}"/>
+            <customControls:HardwareItem x:Name="commutationControl" Title="{x:Static res:Resources.Commutation}" InitializeTimeout="3000" OperationTimeout="0" DisableAvailable="False" Logo="{StaticResource CommutationPath}" Backcolor="{StaticResource xYellow1}" Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=CommIsVisible, Converter={StaticResource B2V}}"/>
+            <customControls:HardwareItem x:Name="gateControl" Title="{x:Static res:Resources.Gate}" InitializeTimeout="3000" OperationTimeout="10000" DisableAvailable="True" Logo="{StaticResource GatePath}" Backcolor="{StaticResource xOrange2}" Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=GateIsVisible, Converter={StaticResource B2V}}"/>
+            <customControls:HardwareItem x:Name="vtmControl" Title="{x:Static res:Resources.Vtm}" InitializeTimeout="15000" OperationTimeout="120000" DisableAvailable="True" Logo="{StaticResource SinusPath}" Backcolor="{StaticResource xRed1}" Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=SLIsVisible, Converter={StaticResource B2V}}"/>
+            <customControls:HardwareItem x:Name="bvtControl" Title="{x:Static res:Resources.Bvt}" InitializeTimeout="3000" OperationTimeout="25000" DisableAvailable="True" Logo="{StaticResource BvtPath}" Backcolor="{StaticResource xBlue3}" Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=BvtIsVisible, Converter={StaticResource B2V}}"/>
+            <customControls:HardwareItem x:Name="clampControl" Title="{x:Static res:Resources.Clamp}" InitializeTimeout="30000" OperationTimeout="40000" DisableAvailable="True" Logo="{StaticResource ClampPath}" Backcolor="{StaticResource xGreen2}" Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=ClampIsVisible, Converter={StaticResource B2V}}"/>
+            <customControls:HardwareItem x:Name="commutationControlEx" Title="{x:Static res:Resources.Commutation}" InitializeTimeout="3000" OperationTimeout="0" DisableAvailable="False" Logo="{StaticResource CommutationPath}" Backcolor="{StaticResource xYellow1}" Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=CommExIsVisible, Converter={StaticResource B2V}}"/>
+            <customControls:HardwareItem x:Name="dVdtControl" Title="{x:Static res:Resources.dVdt}" InitializeTimeout="25000" OperationTimeout="25000" DisableAvailable="True" Logo="{StaticResource CurvePath}" Backcolor="{StaticResource xGreen3}" Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=dVdtIsVisible, Converter={StaticResource B2V}}"/>
+            <customControls:HardwareItem x:Name="aTUControl" Title="{x:Static res:Resources.ATU}" InitializeTimeout="25000" OperationTimeout="25000" DisableAvailable="True" Logo="{StaticResource ATUPath}" Backcolor="{StaticResource xGreen4}" Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=ATUIsVisible, Converter={StaticResource B2V}}"/>
+            <customControls:HardwareItem x:Name="qrrTqControl" Title="{x:Static res:Resources.QrrTq}" InitializeTimeout="25000" OperationTimeout="25000" DisableAvailable="True" Logo="{StaticResource QrrTqPath}" Backcolor="{StaticResource xGreen1}" Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=QrrTqIsVisible, Converter={StaticResource B2V}}"/>
+            <customControls:HardwareItem x:Name="rACControl" Title="{x:Static res:Resources.RAC}" InitializeTimeout="25000" OperationTimeout="25000" DisableAvailable="True" Logo="{StaticResource RACPath}" Backcolor="{StaticResource xGreen3}" Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=RACIsVisible, Converter={StaticResource B2V}}"/>
+            <customControls:HardwareItem x:Name="ihControl" Title="{x:Static res:Resources.IH}" InitializeTimeout="25000" OperationTimeout="25000" DisableAvailable="True" Logo="" Backcolor="{StaticResource xRed1}" Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=IHIsVisible, Converter={StaticResource B2V}}"/>
+            <customControls:HardwareItem x:Name="touControl" Title="{x:Static res:Resources.TOU}" InitializeTimeout="80000" OperationTimeout="80000" DisableAvailable="True" Logo="{StaticResource TOUPath}" Backcolor="{StaticResource xGreen2}" Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=TOUIsVisible, Converter={StaticResource B2V}}"/>
         </UniformGrid>
-
-        <Grid Grid.Column="0" Grid.Row="1">
+        <Grid Grid.Row="1" Grid.Column="0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Button x:Name="btnBack" x:FieldModifier="private" HorizontalAlignment="Left" VerticalAlignment="Bottom"
-                    Grid.Column="0" Grid.Row="0" Style="{StaticResource BackButton}"
-                    Content="{x:Static res:Resources.Back}"
-                    Click="Back_Click"
-                     />
-            <Button x:Name="btnRestart" x:FieldModifier="private" VerticalAlignment="Bottom" HorizontalAlignment="Right"
-                    Grid.Column="3" Grid.Row="0"
-                    Content="{x:Static res:Resources.Restart}"
-                     />
+            <Button x:Name="btnBack" Style="{StaticResource BackButton}" Content="{x:Static res:Resources.Back}" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Bottom" Click="Back_Click"/>
+            <Button x:Name="btnRestart" Content="{x:Static res:Resources.Restart}" Grid.Column="3" HorizontalAlignment="Right" VerticalAlignment="Bottom" Click="btnRestart_Click"/>
         </Grid>
     </Grid>
-
 </Page>
