--- a/SCME.UI/PagesUser/UserTestPage.xaml
+++ b/SCME.UI/PagesUser/UserTestPage.xaml
@@ -102,14 +102,14 @@
             <Label x:Name="lblDeviceClass" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" HorizontalAlignment="Center" Content="{x:Static res:Resources.DeviceRTClass}" FontSize="24" FontWeight="Bold" Height="Auto"/>
         </Grid>
 
-        <Label Grid.Column="0" x:Name="lblSettingTemperature" Grid.Row="4" HorizontalAlignment="Center" Content="{x:Static res:Resources.SettingTemperatureName}" FontSize="25" Height="Auto" />
-        <Label Grid.Column="0" Grid.Row="5" HorizontalAlignment="Center" Content="0" x:Name="SettingTemperatureLabel" FontSize="28" Height="Auto" />
+        <Label Grid.Column="0" x:Name="lblSettingTemperature" Grid.Row="4" HorizontalAlignment="Center" Content="{x:Static res:Resources.SettingTemperatureName}" FontSize="25" Height="Auto" Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=TempIsVisible, Converter={StaticResource B2V}}"/>
+        <Label Grid.Column="0" Grid.Row="5" HorizontalAlignment="Center" Content="0" x:Name="SettingTemperatureLabel" FontSize="28" Height="Auto" Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=TempIsVisible, Converter={StaticResource B2V}}"/>
 
-        <Label Grid.Column="1" x:Name="lblTitleTop" Grid.Row="4" HorizontalAlignment="Center" Content="{x:Static res:Resources.TopTempName}" FontSize="25" Height="40" VerticalAlignment="Top" />
-        <Label Grid.Column="1" Grid.Row="5" HorizontalAlignment="Center" Content="0" x:Name="TopTempLabel" Background="LightGreen" FontSize="28" Height="Auto" />
+        <Label Grid.Column="1" x:Name="lblTitleTop" Grid.Row="4" HorizontalAlignment="Center" Content="{x:Static res:Resources.TopTempName}" FontSize="25" Height="40" VerticalAlignment="Top" Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=TempIsVisible, Converter={StaticResource B2V}}"/>
+        <Label Grid.Column="1" Grid.Row="5" HorizontalAlignment="Center" Content="0" x:Name="TopTempLabel" Background="LightGreen" FontSize="28" Height="Auto" Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=TempIsVisible, Converter={StaticResource B2V}}"/>
 
-        <Label Grid.Column="2" x:Name="lblTitleBot" Grid.Row="4" HorizontalAlignment="Center" Content="{x:Static res:Resources.BotTempName}" FontSize="25" Height="Auto" />
-        <Label Grid.Column="2" x:Name="BotTempLabel" Grid.Row="5" HorizontalAlignment="Center" Content="0" Background="LightGreen" FontSize="28" Height="Auto" />
+        <Label Grid.Column="2" x:Name="lblTitleBot" Grid.Row="4" HorizontalAlignment="Center" Content="{x:Static res:Resources.BotTempName}" FontSize="25" Height="Auto" Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=TempIsVisible, Converter={StaticResource B2V}}"/>
+        <Label Grid.Column="2" x:Name="BotTempLabel" Grid.Row="5" HorizontalAlignment="Center" Content="0" Background="LightGreen" FontSize="28" Height="Auto" Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=TempIsVisible, Converter={StaticResource B2V}}"/>
 
         <dynamicDataDisplay:ChartPlotter x:Name="chartPlotter1" Grid.Row="6" Grid.ColumnSpan="2" Grid.Column="0" Margin="0,8,10,10" Background="Transparent" Foreground="{StaticResource xBlack1}" BorderBrush="Transparent" IsTabStop="False">
             <dynamicDataDisplay:HorizontalAxisTitle x:Name="chartPlotter1HorizontalAxisTitle" Content="{x:Static res:Resources.Graph_V}" />
