--- a/SCME.WpfControlLibrary/CustomControls/ProfilesPageComponents/AddTestParameterUserControl.xaml
+++ b/SCME.WpfControlLibrary/CustomControls/ProfilesPageComponents/AddTestParameterUserControl.xaml
@@ -9,7 +9,7 @@
              xmlns:res="clr-namespace:SCME.WpfControlLibrary.Properties"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance profile:ProfileDeepData}"
-             d:DesignWidth="800">
+             d:DesignWidth="800" d:DesignHeight="150">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -20,28 +20,28 @@
         </ResourceDictionary>
     </UserControl.Resources>
     <Grid Margin="10">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="180" SharedSizeGroup="Column0"/>
-            <ColumnDefinition Width="280" SharedSizeGroup="Column1"/>
-            <ColumnDefinition Width="30"/>
-            <ColumnDefinition Width="120" SharedSizeGroup="Column3"/>
-            <ColumnDefinition Width="270" SharedSizeGroup="Column4"/>
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="45" Name="normRow"/>
-            <RowDefinition Height="45"/>
+            <RowDefinition x:Name="normRow" Height="Auto" MinHeight="45"/>
+            <RowDefinition Height="Auto" MinHeight="45"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <Label Grid.Row="0" Grid.Column="0" Content="{x:Static res:Resources.CommutationTypeT}" Margin="0,0,10,0" Foreground="Black"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="180" SharedSizeGroup="Column0"/>
+            <ColumnDefinition Width="245" SharedSizeGroup="Column1"/>
+            <ColumnDefinition Width="30"/>
+            <ColumnDefinition Width="180" SharedSizeGroup="Column3"/>
+            <ColumnDefinition Width="245" SharedSizeGroup="Column4"/>
+        </Grid.ColumnDefinitions>
+        <Label Content="{x:Static res:Resources.CommutationTypeT}" Grid.Row="0" Grid.Column="0" Foreground="Black"/>
         <ComboBox x:Name="normComboBox" ItemsSource="{Binding Source={StaticResource ModuleCommutationTypes}}" SelectedValue="{Binding CommutationType}" SelectedValuePath="Value" DisplayMemberPath="Key" Grid.Row="0" Grid.Column="1"/>
         <Label Content="{x:Static res:Resources.Force}" Grid.Row="0" Grid.Column="3" Foreground="Black"/>
         <customControl:ValidatingTextBox Text="{Binding ParameterClamp}" IsNumeric="True" Grid.Row="0" Grid.Column="4" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
-        <Label Content="{x:Static res:Resources.Height_Prof}" Grid.Row="1" Grid.Column="0" Foreground="Black"/>
-        <customControl:ValidatingTextBox Text="{Binding Height}" IsNumeric="True" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
-        <Label Content="{x:Static res:Resources.Temp}" Grid.Row="1" Grid.Column="3" Foreground="Black"/>
-        <customControl:ValidatingTextBox Text="{Binding Temperature}" IsNumeric="True" Grid.Column="4" Grid.Row="1" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
-        <Label Content="{x:Static res:Resources.ParameterType}" Grid.Row="2" Grid.Column="0" Foreground="Black" Visibility="{Binding ProfileVm.IsEditModeActive, RelativeSource={RelativeSource FindAncestor, AncestorType=pages:ProfilesPage}, Converter={StaticResource B2V}}"/>
-        <ComboBox ItemsSource="{Binding Source={StaticResource TestParametersTypes}}" SelectedValue="{Binding Path=ProfileVm.SelectedTestParametersType, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type pages:ProfilesPage}}}" SelectedValuePath="TestParametersType" DisplayMemberPath="Name" Grid.Row="2" Grid.Column="1" Height="{Binding ActualHeight, ElementName=normComboBox}" Visibility="{Binding ProfileVm.IsEditModeActive, RelativeSource={RelativeSource FindAncestor, AncestorType=pages:ProfilesPage}, Converter={StaticResource B2V}}"/>
-        <Button Style="{StaticResource PrimaryButton}" Content="{x:Static res:Resources.Add}" Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2" Margin="0,5,0,5" Width="Auto" Height="{Binding ActualHeight, ElementName=normComboBox}" Background="#FF0078D7" Visibility="{Binding ProfileVm.IsEditModeActive, RelativeSource={RelativeSource FindAncestor, AncestorType=pages:ProfilesPage}, Converter={StaticResource B2V}}" Click="AddTestParameters_Click"/>
+        <Label Content="{x:Static res:Resources.Height_Prof}" Grid.Row="1" Grid.Column="0" Margin="0,5,0,0" Foreground="Black"/>
+        <customControl:ValidatingTextBox Text="{Binding Height}" IsNumeric="True" Grid.Row="1" Grid.Column="1" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+        <Label Content="{x:Static res:Resources.Temp}" Grid.Row="1" Grid.Column="3" Margin="0,5,0,0" Foreground="Black"/>
+        <customControl:ValidatingTextBox Text="{Binding Temperature}" IsNumeric="True" Grid.Column="4" Grid.Row="1" Margin="0,5,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+        <Label Content="{x:Static res:Resources.ParameterType}" Grid.Row="2" Grid.Column="0" Margin="0,5,0,0" Foreground="Black" Visibility="{Binding ProfileVm.IsEditModeActive, RelativeSource={RelativeSource FindAncestor, AncestorType=pages:ProfilesPage}, Converter={StaticResource B2V}}"/>
+        <ComboBox ItemsSource="{Binding Source={StaticResource TestParametersTypes}}" SelectedValue="{Binding Path=ProfileVm.SelectedTestParametersType, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type pages:ProfilesPage}}}" SelectedValuePath="TestParametersType" DisplayMemberPath="Name" Grid.Row="2" Grid.Column="1" Margin="0,5,0,0" Height="{Binding ActualHeight, ElementName=normComboBox}" Visibility="{Binding ProfileVm.IsEditModeActive, RelativeSource={RelativeSource FindAncestor, AncestorType=pages:ProfilesPage}, Converter={StaticResource B2V}}"/>
+        <Button Style="{StaticResource PrimaryButton}" Content="{x:Static res:Resources.Add}" Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2" Margin="0,5,0,0" Width="Auto" Height="{Binding ActualHeight, ElementName=normComboBox}" Background="#FF0078D7" Visibility="{Binding ProfileVm.IsEditModeActive, RelativeSource={RelativeSource FindAncestor, AncestorType=pages:ProfilesPage}, Converter={StaticResource B2V}}" Click="AddTestParameters_Click"/>
     </Grid>
 </UserControl>
